# grey

./: CLAUDE.md  Cargo.toml  README.md
crates/grey-bench/examples/: compile_vs_exec.rs
crates/grey-pvm/: Cargo.toml
crates/grey-pvm/src/: instruction.rs  lib.rs  memory.rs  program.rs  vm.rs
crates/grey-pvm/src/recompiler/: asm.rs
crates/grey-state/: Cargo.toml
crates/grey-state/src/: accumulate.rs  lib.rs  pvm_backend.rs  statistics.rs  transition.rs
crates/grey-state/tests/: stf_accumulate.rs  stf_blocks.rs  stf_statistics.rs
crates/grey-types/: Cargo.toml
crates/grey-types/src/: config.rs  header.rs  lib.rs  serde_utils.rs  state.rs  work.rs
crates/grey/src/: finality.rs  main.rs  node.rs
crates/javm/: Cargo.toml
crates/javm/src/: gas_cost.rs  vm.rs
crates/javm/src/recompiler/: codegen.rs  gas_sim.rs  mod.rs
docs/: graypaper.md  host-call-ordering.md  pvm-recompiler-optimization.md  pvm-recompiler-sandboxing.md  pvm-redesign.md
