[package]
name = "grey-pvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Polkadot Virtual Machine (PVM) implementation for JAM."

[features]
default = ["std"]
std = ["grey-types/std", "tracing/std", "libc"]

[dependencies]
grey-types = { path = "../grey-types", default-features = false }
libc = { version = "0.2", optional = true }
tracing = { workspace = true }
